--- a/_posts/2020-12-08-15minutecity.md
+++ b/_posts/2020-12-08-15minutecity.md
@@ -42,7 +42,7 @@ GOAT can also calculate the total amount of amenities per type within a specific
 {% include image.html src="blog/15minutecity/isochrone.png" alt="Isochrones and amenity counts" maxheight="300px" %} 
 <i>Figure 4. Isochrones and amenity counts</i>
 
-As can be seen, GOAT has vast potential for assessing accessibility conditions in cities, and therefore, to be used as a tool to planning cities towards the 15-minute and neighbourhood mobility. The use of pedestrian networks, the applicability in many different environments, and the various walkability indicators are some of the features that GOAT has to understand the urban environment and enhance the walkable cities. To get more information about the different functionalities, please visit our tutorial page [here](../../tutorials/isochrone), or to experiment with the current implementations [here](../../versions).
+As can be seen, GOAT has vast potential for assessing accessibility conditions in cities, and therefore, to be used as a tool to planning cities towards the 15-minute and neighbourhood mobility. The use of pedestrian networks, the applicability in many different environments, and the various walkability indicators are some of the features that GOAT has to understand the urban environment and enhance the walkable cities. To get more information about the different functionalities, please visit our [tutorial page](../../tutorials/isochrone), or to experiment with the [current implementations](../../versions).
 
   
 <b>References</b> 
