--- a/de/_posts/2020-12-08-15minutecity.md
+++ b/de/_posts/2020-12-08-15minutecity.md
@@ -55,4 +55,4 @@ Geraint, Ellis; hunter, Ruth; Donnely, Michael; Kelleher, Luke; Kee, Frank (2015
 
 Moreno, Carlos (2019): The 15 minutes-city: for a new chrono-urbanism! Paris. Available online at [http://www.moreno-web.net/the-15-minutes-city-for-a-new-chrono-urbanism-pr-carlos-moreno/](http://www.moreno-web.net/the-15-minutes-city-for-a-new-chrono-urbanism-pr-carlos-moreno/), checked on 12/1/2020.
 
-SDP Bogotá (2020): Una ciudad de 15 minutos donde se priorice al peatón. A 15-minute city where the pedestrian is prioritized. Available online at [www.sdp.gov.co/noticias/ciudad-de-15-minutos-donde-se-priorice-al-peaton](www.sdp.gov.co/noticias/ciudad-de-15-minutos-donde-se-priorice-al-peaton), updated on 8/31/2020, checked on 12/1/2020.
+SDP Bogotá (2020): Una ciudad de 15 minutos donde se priorice al peatón. A 15-minute city where the pedestrian is prioritized. Available online at [http://www.sdp.gov.co/noticias/ciudad-de-15-minutos-donde-se-priorice-al-peaton](http://www.sdp.gov.co/noticias/ciudad-de-15-minutos-donde-se-priorice-al-peaton), updated on 8/31/2020, checked on 12/1/2020.
