--- a/de/_posts/2020-01-07-mFund.md
+++ b/de/_posts/2020-01-07-mFund.md
@@ -1,6 +1,6 @@
 ---
 permalink: /de/mFund/
-title:  "Major extensions are coming"
+title:  "Große Erweiterungen bahnen sich an"
 author: [pajares, jehle, hassine]
 lang: de
 tags: [de]
@@ -9,23 +9,23 @@ thumbnail: blog/mFund/thumbnail.png
 image: blog/mFund/thumbnail.png
 ---
 
-We are very excited to announce the launch of a great new project within the research initiative mFund, that is funded by the Federal Ministry of Transport and Digital Infrastructure. The aim of the project is to enhance GOAT to include new features such as cycling, scenarios on land-use changes and further enhancements that improve the usability of the application.  
+Wir freuen uns sehr, den Start eines spannenden neuen Projektes im Rahmen der Forschungsinitiative mFund, die durch das Ministerium für Verkehr und digitale Infrastruktur gefördert wird, bekannt zu geben. Ziel dieses Projektes ist es GOAT um neue Funktionen wie den Radverkehr, Szenarien und Landnutzungsveränderungen sowie weitere Erweiterungen zu ergänzen, um so die Benutzerfreundlichkeit der App zu verbessern.
 
-The research initiative mFund supports research and development projects relating to digital data-based applications for mobility 4.0 (more information: [www.mfund.de](http://www.mfund.de)). Within this framework, the Chair for Urban Structure and Transport Planning at the Technical University of Munich has received a one-year funding for the further development of the innovative open-source tool GOAT. The associated project runs until November 2020 and will end with releasing a fully operational version labeled 1.0 of GOAT.
+Die Forschungsinitiative mFund unterstützt Forschungs- und Entwicklungsprojekte rund um digitale datenbasierte Anwendungen für Mobilität 4.0 (weitere Infos dazu: [www.mfund.de](http://www.mfund.de)). Der Lehrstuhl für Siedlungsstruktur und Verkehrsplanung hat hierbei eine ein-Jahres-Förderung zur weiteren Entwicklung des Open-Source-Tools GOAT erhalten. Das dazugehörige Projekt läuft bis November 2020 und endet mit der Veröffentlichung einer voll funktionsfähigen Version von GOAT 1.0. 
 
-Through close coordination and cooperation in test cycles and workshops with practitioners from the municipalities München, Fürstenfeldbruck and Freising, GOAT will be continuously improved in terms of usability and usefulness and thus adapted to the needs of planners.
+Durch eine enge Koordination und Kooperation in Testzyklen und Workshops mit Anwendenden der Kommunen München, Fürstenfeldbruck und Freising, wird GOAT iterativ in Hinblick auf Benutzerfreundlichkeit und Nützlichkeit verbessert und so den Bedürfnissen der Planer*Innen angepasst.
 
-So far, the online webtool is only available for Munich. However, within this project, GOAT will also be published for Freising and Fürstenfeldbruck. The three cities are shown in the map below. Munich is the 3rd largest city in Germany and has a population of around 1.5 million. Freising is a town located north of Munich and has 48.634 Inhabitants. Fürstenfeldbruck is a town with 35.494 inhabitants and is located in the west of Munich.
+Das Online-Webtool, das momentan nur für die Stadt München zur Verfügung steht, wird innerhalb dieses Projektes auch für Freising und Fürstenfeldbruck veröffentlicht. Diese drei Städte (siehe untenstehende Karte) bilden unsere Anwendungskommunen im Rahmen des mFund Projektes. München ist die drittgrößte Stadt Deutschlands und hat eine Einwohnerzahl von circa 1.5 Millionen. Freising ist eine Große Kreisstadt und Universitätsstadt, die im Norden Münchens liegt, mit 48.634 Einwohnern. Fürstenfeldbruck ist eine Große Kreisstadt mit 35.494 Einwohnern und liegt im Westen von München. 
 
-{% include image.html src="blog/mFund/mfund_map.png" alt="Location of the three test municipalities" %}
+{% include image.html src="blog/mFund/mfund_map.png" alt="Die drei Anwendungskommunen im Rahmen des mFund Projektes" %}
 
-GOAT as open-source accessibility instrument aims to provide a toolbox that helps to properly plan for pedestrians and cyclists. In the course of this project, numerous features will be added. Thus, all accessibility calculations that are currently available for walking will also be provided for cycling. For this purpose, the routing functions will be adjusted and new attributes such as incline and smoothness of the road surface included.
+GOAT ist ein Open-Source-Tool für Erreichbarkeitsanalysen und verfolgt das Ziel, bessere Planungen für den Fuß- und Radverkehr zu ermöglichen. Im Laufe dieses Projektes werden zahlreiche weitere Funktionen hinzukommen. Daher werden alle Erreichbarkeitsberechnungen, die zurzeit für den Fußverkehr zur Verfügung stehen, auch für den Radverkehr bereitgestellt. Zu diesem Zweck werden die Routingfunktionen um neue Attribute wie Steigerung und Beschaffenheit des Straßenbelages erweitert.
 
-In addition, soon it will be possible to interactively model and evaluate scenarios for land-use changes (e.g. the construction of new residential areas or the opening of a new school). Since good data availability is a prerequisite for every model, a strong focus will also be on fusing different datasets and foster further contribution to the OpenStreetMap project. Furthermore, in the future, it will be easier to upload and use own custom data.
+In Ergänzung dazu, wird es bald möglich sein, Szenarien zu Änderungen der Flächennutzung interaktiv zu modellieren und evaluieren (bspw. der Bau neuer Wohngebiete oder die Eröffnung einer neuen Schule). Gute Datenverfügbarkeit ist die Voraussetzung jedes Modells, daher wird ein starker Fokus auf die Fusionierung unterschiedlicher Datensätze und die Förderung weiterer Beiträge zum OpenStreetMap-Projekt gelegt. Des Weiteren wird es zukünftig einfacher werden benutzerdefinierte Daten hochzuladen und zu verwenden.
 
-With the newly provided options GOAT aims to serve as useful planning instrument for more efficient and effective transport, land use and mobility planning. We are excited to work on this project and are looking forward to your feedback.
+GOAT zielt darauf ab als nützliches Stadtplanungsinstrument für eine effizientere und effektivere Planung von Verkehr, Flächennutzung und Mobilität zu dienen. Wir freuen uns darauf an diesem Projekt zu arbeiten und sind gespannt auf das Feedback!
 
-For further information, click on the links below:
+Für weitere Informationen, einfach auf die untenstehenden Links klicken:
 
 [https://www.bgu.tum.de/sv/forschung-und-beratung/projekte/projekte/goat/](https://www.bgu.tum.de/sv/forschung-und-beratung/projekte/projekte/goat/)
 
