--- a/de/_posts/2020-02-19-survey.md
+++ b/de/_posts/2020-02-19-survey.md
@@ -1,6 +1,6 @@
 ---
 permalink: /de/survey/
-title:  "Participate in our survey"
+title:  "Nehmen Sie an unserer Umfrage teil"
 author: [jehle]
 lang: de
 tags: [de]
@@ -9,15 +9,15 @@ thumbnail: blog/survey/survey_welcome.png
 image: blog/survey/survey_welcome.png
 ---
 
-Best experts are users! Therefore, we have started an online survey to learn more about the needs and experiences of people that have tested GOAT. The survey will be online during the entire duration of the [mFund project](../../../../2020/01/07/mFund/) and will support us in the development path. This will ensure a successful and practice-oriented development that will result in a comprehensive and useful tool.
+Die besten Expertenmeinungen kommen von unseren Nutzer*Innen! Aus diesem Grund haben wir eine online Umfrage gestartet, um mehr über die Bedürfnisse und Erfahrungen der Menschen herauszufinden, die GOAT bereits getestet haben. Die Umfrage wird während der gesamten Dauer des [mFund Projektes](../../../../2020/01/07/mFund/) online sein und wird uns in unserem Entwicklungsweg unterstützen. Damit soll eine erfolgreiche und praxis-orientierte Entwicklung sichergestellt werden, die in ein verständliches und nützliches Tool hervorbringt.
 
-The main part of the survey are questions about the usefulness and usability of the features provided (e.g. which features were used and how satisfied the user was with the results). We are working hard to make the tool more intuitive and user-friendly. Besides improving the front-end, we have several ideas to make GOAT easier to use (e.g. providing video tutorials or personal training). The answers to the survey can help us to develop the most desired methods.
+Der Hauptteil der Umfrage besteht aus Fragen zur Nützlichkeit und Bedienbarkeit der angebotenen Funktionen (bspw. Welche Funktionen wurden genutzt und wie hilfreich waren die Ergebnisse für die Nutzer*Innen). Wir arbeiten hart daran das Tool intuitiver in der Handhabung und nutzerfreundlicher zu gestalten. Neben der Verbesserung des Front-Ends haben wir noch weitere Ideen, wie wir die Bedienung von GOAT erleichtern könnten (bspw. indem wir Video-Tutorials zur Verfügung stellen). Die Antworten der Umfragen können uns dabei helfen die am häufigsten gewünschten Funktionen zu entwickeln. 
 
-Furthermore, knowledge about the user backgrounds can guide us in advancing GOAT in the most useful direction. Therefore it would be very interesting to us to learn, in which field you would like to apply GOAT. At the end of the survey, the participants can rate GOAT and name features that they would like to see in GOAT in the future.
+Außerdem trägt Wissen über die Nutzerhintergründe dazu bei, dass wir uns mit GOAT in die richtige Richtung bewegen. Daher wäre es für uns interessant zu wissen in welchem Bereich Sie GOAT anwenden möchten. Am Ende der Umfrage können die Teilnehmer*Innen GOAT bewerten und uns mitteilen, welche Funktionen sie in Zukunft bei GOAT sehen möchten.
 
-{% include image.html src="blog/survey/survey_welcome.png" alt="Welcome to the GOAT survey" %}
+{% include image.html src="blog/survey/survey_welcome.png" alt="Willkommen zur GOAT Umfrage" %}
 
-If you like to support us in the development process of GOAT, we would appreciate your very valuable feedback on improvements and future ideas. We kindly invite you to answer this brief survey. It is available in English and German. 
+Wenn Sie uns bei dem Entwicklungsprozess von GOAT unterstützen möchten, würden wir uns sehr über Ihr Feedback mit Verbesserungsvorschlägen und zukünftigen Ideen freuen. Hierzu laden wir Sie dazu ein die Fragen dieser kurzen Umfrage zu beantworten, sie steht sowohl auf Englisch als auch auf Deutsch zur Verfügung. 
 
-[https://www.umfrage.sv.bgu.tum.de/index.php/837925?lang=en](https://www.umfrage.sv.bgu.tum.de/index.php/837925?lang=en)
+[https://www.umfrage.sv.bgu.tum.de/index.php/837925?lang=de](https://www.umfrage.sv.bgu.tum.de/index.php/837925?lang=de)
 
