final adjustments blogpost release 1.0

--- a/de/_posts/2021-02-27-release1.md
+++ b/de/_posts/2021-02-27-release1.md
@@ -12,7 +12,7 @@ excerpt:
 
 Wir freuen uns, den GOAT Release 1.0 zu veröffentlichen! Somit sind wir unserem Ziel, GOAT zu einem nützlichen Planinstrument zur Gestaltung lebenswerter Städte zu etablieren, einen Schritt nähergekommen.
 
-Dieser Meilenstein wurde nicht zuletzt durch die einjährige Förderung der Forschungsinitiative [mFund](https://www.bmvi.de/SharedDocs/DE/Artikel/DG/mfund-projekte/GOAT.html), die vom Bundesministerium für Verkehr und digitale Infrastruktur bereitgestellt wurde, erreicht. Unser Projektziel war es GOAT zu verbessern und neue Funktionen einzubauen, die genau auf die Bedürfnisse der Anwendenden zugeschnitten sind. 
+Dieser Meilenstein wurde nicht zuletzt durch die einjährige Förderung der Forschungsinitiative [mFund](https://www.bmvi.de/SharedDocs/DE/Artikel/DG/mfund-projekte/GOAT.html), die vom Bundesministerium für Verkehr und digitale Infrastruktur bereitgestellt wurde, erreicht. Unser Projektziel war es GOAT zu verbessern und neue Funktionen einzubauen, die genau auf die Bedürfnisse der Praxis zugeschnitten sind. 
 
 Nach einem Jahr ist das Projekt nun erfolgreich abgeschlossen und wir freuen uns die GOAT Version 1.0 samt aller neuen Funktionen, die wir im Rahmen des Projektes entwickelt haben, vorzustellen. Einige ausgewählte Beispiele für die neuen Funktionen sind:
 - Fahrrad-Routing
@@ -49,7 +49,7 @@ Denn wir haben noch weitere Anfragen zu gewünschten Funktionen (z.B. Bereitstel
 
 Unsere Arbeit im Rahmen des Projektes begrenzte sich nicht nur auf die Entwicklung des Tools, wir waren zusätzlich auch in unterschiedlichen Netzwerken aktiv. Um unser entwickeltes Tool publik zu machen und neue Personen, die auf diesem Feld arbeiten, kennen zu lernen, haben wir an unterschiedlichen mFund-Events, wie dem “Fachaustausch Fußverkehr” und “Fachaustausch Radverkehr” teilgenommen. Mit einigen Personen, die wir bei diesen inspirierenden Veranstaltungen kennen gelernt haben, stehen wir weiterhin im engen Kontakt und sind im regen Austausch.
 
-Wir sind auch stolz darauf, Teil der Interviewreihe [“7 Fragen an …”](https://www.wik.org/fileadmin/mFUND_VF/mFUND_WIK_7_Fragen_an_GOAT.pdf) zu sein! Unser Projektleiter, Elias Pajares hat dabei in einem Interview das Tool vorgestellt und Fragen zu GOAT beantwortet.
+Außerdem waren wir Teil der Interviewreihe [“7 Fragen an …”](https://www.wik.org/fileadmin/mFUND_VF/mFUND_WIK_7_Fragen_an_GOAT.pdf) in der Elias Pajares das Tool vorgestellt und Fragen zu GOAT beantwortet hat.
 
 Open-Data ist die Grundlage unseres Projektes und wir sind stark von der Datenqualität abhängig. Daher haben wir aktiv mit eigenen Daten zur Open-Data-Community beigetragen, indem wir während der gesamten Projektlaufzeit eine große Menge OpenStreetMap-Daten (OSM) gesammelt haben. 
 Wir schlossen systematisch Datenlücken und organisierten [“Mapping Parties”](../mapping-parties), bei denen wir Newcomern die Welt der Open-Data aufzeigten und sie dafür begeistern konnten, neue Daten zu OSM beizutragen. 
@@ -60,4 +60,4 @@ Wir haben auch [innovative Ansätze](../sensor-freiberg) zur Erfassung spezifisc
 
 Neben der Verbesserung der Daten als solche, haben wir auch den Algorithmus für die Datenverarbeitung von GOAT verbessert. All das hat uns dabei verholfen, eine stabile und relevante Version 1.0 zu erreichen, die nun auf [GitHub](https://github.com/goat-community/goat) öffentlich zur Verfügung steht. Wir freuen uns über den Fortschritt und das Ergebnis unseres Projektes innerhalb der mFund Forschungsinitiative. 
 
-Unsere Strategie, Berufspraktizierende in den Entwicklungsprozess einzubeziehen hat sich bewährt und wir erhielten sehr wertvolle Einsichten in ihren Bedürfnissen. Wir werden weiterhin alles dafür tun, damit GOAT zu einem durch und durch nützlichen Planungstool für lebenswertere Städte wird!
+Unsere Strategie, PraxisanwenderInnen in den Entwicklungsprozess einzubeziehen hat sich bewährt und wir erhielten sehr wertvolle Einsichten in ihren Bedürfnissen. Wir werden weiterhin alles dafür tun, damit GOAT zu einem durch und durch nützlichen Planungstool für lebenswertere Städte und Gemeinden wird!
