--- a/_posts/2021-02-27-release1.md
+++ b/_posts/2021-02-27-release1.md
@@ -37,15 +37,15 @@ After the participants were familiarized with the tool and its main features, th
 
 The planning workshops were followed by a final synthesis workshop, where the experiences from all three municipalities were brought together. This workshop was used to evaluate the project and to define future development strategies for GOAT. 
 
-In total there were more than 10 workshops held. Some of them in-person, some were held online due to the COVID-19 situation. The workshops helped us to get valuable feedback and develop GOAT to an applicable and useful planning instrument for planning active mobility. 
+In total there were organized more than 10 workshops. Some of them in-person, some were held online due to the COVID-19 situation.
 
 We received positive feedback on the usability and usefulness of GOAT. Moreover, the tool is already in use by the local practitioners which also outlines the practicability of the tool. Nonetheless, we are not done yet! Keep in mind, that we received more requests about further features (e.g., provision of a user login, better tutorials, scenarios with changed path attributes, including the subjective walkability, spatial extension to whole Germany), which we will tackle in the future. 
 
 In addition to the development work, we were active in different networks. To disseminate our developed tool and get to know other persons that are working in this field, we participated in many mFund events, such as “Fachaustausch Fußverkehr” and “Fachaustausch Radverkehr”. We are still in close contact and exchange with some of the people we met at these inspiring events. 
 
-Also, we are proud to be part of the interview series [“7 Fragen an …”](https://www.wik.org/fileadmin/mFUND_VF/mFUND_WIK_7_Fragen_an_GOAT.pdf), where our project leader Elias Pajares answered questions about GOAT and presented the tool. 
+Furthermore, we were part of the interview series [“7 Fragen an …”](https://www.wik.org/fileadmin/mFUND_VF/mFUND_WIK_7_Fragen_an_GOAT.pdf), where our project leader Elias Pajares answered questions about GOAT and presented the tool. 
 
-As open data is the foundation of our project and we highly rely on the data quality, we actively contributed to the open data community by collecting a large amount of OpenStreetMap (OSM) data during the whole project phase. We systematically closed data gaps by mapping ourselves, and organized [“Mapping Parties”](../mapping-parties) where we introduced newcomers to the world of open data and got them excited about contributing to OSM. 
+As open data is the foundation of our project and we highly rely on the data quality, we actively contributed to the open data community by collecting a large amount of OpenStreetMap (OSM) data during the whole project phase. We systematically closed data gaps by mapping ourselves, and organized [“Mapping Parties”](../mapping-parties) where we introduced newcomers to the world of open data and got them excited about contributing to OSM (check our [poster](https://wiki.openstreetmap.org/wiki/File:GOAT_Poster_StoM.pdf)). 
 
 In addition, [we captured many kilometers of road in Fürstenfeldbruck with Mapillary](../mapillary). With this new data we were able to complete the attributes of the street network, which allows us to identify the type of surface and smoothness of a road or path. And recognize if specific roads are designed for bicycles or pedestrians.
 
@@ -53,4 +53,4 @@ We also included [innovative approaches](../sensor-freiberg) to gather more spec
 
 Besides the improvement of the data itself, we also enhanced the data processing algorithms of GOAT. This all together helped us to achieve a stable and reliant version 1.0, which is open available on [GitHub](https://github.com/goat-community/goat). We are very happy with our progress and the outcome of our project within the mFund research initiative. 
 
-Our strategy to involve practitioners in the development process was successful and we received very important insights on their needs. We will continue to put everything we have in the development of GOAT to make it an essential decision-making tool to plan for more livable cities! 
+Our strategy to involve practitioners in the development process was successful and we received very important insights on their needs. We will continue to put everything we have in the development of GOAT to make it an outstanding planning support tool to plan for more livable communities! 
