--- a/de/_posts/2021-03-07-release1.md
+++ b/de/_posts/2021-03-07-release1.md
@@ -10,7 +10,7 @@ image: blog/release1/goat-logo.png
 excerpt: 
 ---
 
-Wir freuen uns, den GOAT Release 1.0 zu veröffentlichen! Somit sind wir unserem Ziel, GOAT zu einem nützlichen Planinstrument zur Gestaltung lebenswerter Städte zu etablieren, einen Schritt nähergekommen.
+Wir freuen uns, den GOAT Release 1.0 zu veröffentlichen! Somit sind wir unserem Ziel, GOAT zu einem nützlichen Planungsinstrument zur Gestaltung lebenswerter Räume zu etablieren, einen Schritt nähergekommen.
 
 Dieser Meilenstein wurde nicht zuletzt durch die einjährige Förderung der Forschungsinitiative [mFund](https://www.bmvi.de/SharedDocs/DE/Artikel/DG/mfund-projekte/GOAT.html), die vom Bundesministerium für Verkehr und digitale Infrastruktur bereitgestellt wurde, erreicht. Unser Projektziel war es GOAT zu verbessern und neue Funktionen einzubauen, die genau auf die Bedürfnisse der Praxis zugeschnitten sind. 
 
