--- a/_posts/2021-03-08-release1.md
+++ b/_posts/2021-03-08-release1.md
@@ -9,7 +9,7 @@ image: blog/release1/goat-logo.png
 excerpt: 
 ---
 
-We are happy to announce that we successfully launched version GOAT1.0. Therefore, we are one step closer to our goal of GOAT becoming a useful planning instrument to shape livable cities. 
+We are happy to announce that we successfully launched version GOAT1.0. Therefore, we are one step closer to our goal of GOAT becoming a useful planning instrument to shape livable communities. 
 
 This milestone was enabled by a one-year funding from  the research initiative [mFund](https://www.bmvi.de/SharedDocs/DE/Artikel/DG/mfund-projekte/GOAT.html), which was provided by Federal Ministry of Transport and Digital Infrastructure. Our aim was to improve GOAT and to include new features, which are adapted exactly to the needs of practitioners. 
 
