--- a/de/_posts/2021-03-08-release1.md
+++ b/de/_posts/2021-03-08-release1.md
@@ -31,7 +31,7 @@ GOAT versteht sich als wertvolles Werkzeug für StadtplanerInnen und Entscheidun
 In diesen drei Testzyklen konnten die Teilnehmenden einerseits GOAT kennen lernen und erste praktische Erfahrungen damit sammeln. Andererseits haben sie wertvolles Feedback gegeben und machten konstruktive Verbesserungsvorschläge. Die Funktionen wurden nach jedem Testzyklus verbessert, sodass die Teilnehmenden bei jedem Workshop eine neue und verbesserte Version von GOAT testen konnten. 
 
 {% include image.html src="blog/release1/timeline_de.png" alt="Projektablauf" maxheight="450px" %} 
-<i>Figure 1. Projektablauf</i>
+<i>Abbildung 1. Projektablauf</i>
 
 Im Rahmen des mFund Projektes haben wir mit drei Kommunen als Projektpartner zusammen gearbeitet: München, Fürstenfeldbruck und Freising. Nach den Testzyklen in Fürstenfeldbruck, organisierte das GOAT-Team noch weitere Planungs-Workshops mit je 6-10 Teilnehmenden in allen drei Partner-Städten. 
 
@@ -61,7 +61,7 @@ Wir haben auch [innovative Ansätze](../sensor-freiberg) zur Erfassung spezifisc
 Neben der Verbesserung der Daten als solche, haben wir auch den Algorithmus für die Datenverarbeitung von GOAT verbessert. All das hat uns dabei verholfen, eine stabile und praxistaugliche Version 1.0 zu erreichen, die nun auf [GitHub](https://github.com/goat-community/goat) öffentlich zur Verfügung steht. Mit diesem Release präsentieren wir GOAT in einem neuen Look.
 
 {% include image.html src="blog/release1/screenshot.png" alt="project timeline" maxheight="450px"  %} 
-<i>Figure 2. Das überarbeitete GOAT-Interface, Visualisierung der Erreichbarkeit zu Kitas</i>
+<i>Abbildung 2. Das überarbeitete GOAT-Interface, Visualisierung der Erreichbarkeit zu Kitas</i>
 
 Wir freuen uns über den Fortschritt und das Ergebnis unseres Projektes innerhalb der mFund Forschungsinitiative. 
 
